*SVN*

* Support multiple config.after_initialize blocks so plugins and apps can more easily cooperate.  #9582 [zdennis]

* Added db:drop:all to drop all databases declared in config/database.yml [DHH]

* Use attribute pairs instead of the migration name to create add and remove column migrations.  Closes #9166 [lifofifo]

	For example:

	ruby script/generation migration AddSomeStuffToCustomers first_name:string last_name:string
	
	or
	
	ruby script/generation migration RemoveSomeStuffFromCustomers first_name:string last_name:string

* Add ActiveResource to Rails::Info.  Closes #8741 [kampers]

* use Gem.find_name instead of search when freezing gems.  Prevent false positives for other gems with rails in the name. Closes #8729 [wselman]

* Automatically generate add/remove column commands in specially named migrations like AddLocationToEvent.  Closes #9006 [zenspider]

* Default to plural table name in Rails Generator if ActiveRecord is not present.  Closes #8963 [evan]

* Added rake routes for listing all the defined routes in the system #8795 [josh]

* db:create creates the database for the current environment if it's on localhost. db:create:all creates local databases for all environments.  #8783 [matt]

* Generators: look for generators in all gems, not just those suffixed with _generator, in the gem's generators or rails_generators directory. Allow use of the rails_generators directory instead of the standard generators directory in plugins also.  #8730 [Dr Nic, topfunky]

* MySQL, PostgreSQL: database.yml defaults to utf-8.  #8701 [matt]

* Added db:version to get the current schema number [via Err The Blog]

* Added --skip-migration option to scaffold and resource generators #8656 [Michael Glaesemann]

* Fix that FCGIs would leave log files open when asked to shut down by USR2 #3028 [sebastian.kanthak/josh]
